--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <!-- Why Choose Us -->
     <section class="why-choose">
-      <h3>Why Choose Us?</h3>
+      <h3>Why Choose BakeEase?</h3>
       <ul>
         <li>✅ Baked fresh daily</li>
         <li>✅ Premium ingredients</li>
