--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="logo-search">
       <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
       <form class="search-form" action="products.html" method="get">
-        <input type="text" name="search" placeholder="Welcome To BakeEase Bakery" />
-        <button type="submit">Search</button>
-      </form>
+  <input type="text" name="search" placeholder="Welcome To BakeEase" />
+  <button type="submit">Search</button>
+</form>
     </div>
 
     <!-- Right Side Icons: Menu, Cart, Profile -->
