--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
     <div class="header-bar">
     <!-- Logo only -->
     <div class="logo-search">
-      <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
+      <a href="index.html">
+      <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
       <h1 id="page-heading">Contact Us</h1>
     </div>
 
