--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <div class="header-bar">
     <!-- Logo + Search Centered -->
     <div class="logo-search">
-      <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
+      <a href="index.html">
+      <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
       <form class="search-form" action="products.html" method="get">
   <input type="text" name="search" placeholder="Welcome To BakeEase" />
   <button type="submit">Search</button>
