--- a/product-detail.html
+++ b/product-detail.html
@@ -10,7 +10,8 @@
   <header>
     <div class="header-bar">
       <div class="logo-search">
-        <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
+        <a href="index.html">
+        <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
         <h1 id="page-heading">Our Cakes</h1>
       </div>
       <div class="header-right">
