--- a/products.html
+++ b/products.html
@@ -11,7 +11,8 @@
   <div class="header-bar">
     <!-- Logo only -->
     <div class="logo-search">
-      <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
+      <a href="index.html">
+      <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
       <h1 id="page-heading">Our Delicious Cake</h1>
     </div>
 
