--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <header>
   <div class="header-bar">
     <!-- Logo + Search Centered -->
-    <div class="logo-search">
+    <div class="logo-left">
       <a href="index.html">
       <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
+      <div class="search-center">
       <form class="search-form" action="products.html" method="get">
   <input type="text" name="search" placeholder="Welcome To BakeEase" />
   <button type="submit">Search</button>
 </form>
+      </div>
     </div>
 
     <!-- Right Side Icons: Menu, Cart, Profile -->
