--- a/product-detail.html
+++ b/product-detail.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="header-bar">
-      <div class="logo-search">
+      <div class="logo-left">
         <a href="index.html">
         <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
         <h1 id="page-heading">Our Cakes</h1>
