--- a/products.html
+++ b/products.html
@@ -10,7 +10,7 @@
   <header>
   <div class="header-bar">
     <!-- Logo only -->
-    <div class="logo-search">
+    <div class="logo-left">
       <a href="index.html">
       <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
       <h1 id="page-heading">Our Delicious Cake</h1>
