--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 BakeEase Bakery</p>
+    <p>&copy; 2025 BakeEase Bakery. All rights reserved.</p>
   </footer>
 
 <script>
