--- a/login.html
+++ b/login.html
@@ -81,8 +81,9 @@
   <header>
     <div class="header-bar">
       <!-- Logo only -->
-      <div class="logo-search">
-        <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
+      <div class="logo-left">
+      <a href="index.html">
+        <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
         <h1 id="page-heading">Login</h1>
       </div>
       
