--- a/login.html
+++ b/login.html
@@ -145,7 +145,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 BakeEase Bakery</p>
+    <p>&copy; 2025 BakeEase Bakery. All rights reserved.</p>
   </footer>
 
   <script>
