--- a/login.html
+++ b/login.html
@@ -50,6 +50,7 @@
       font-size: 16px;
       cursor: pointer;
       transition: background-color 0.3s;
+      text-align: center;
     }
     
     .btn-primary:hover {
