--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
       <div class="cart-dropdown">
         <span class="cart-icon" id="cartToggle">🛒</span>
         <div class="dropdown-menu" id="cartMenu">
-          <a href="cart.html">View Cart</a>
+          <a href="shoppingCart.html">View Cart</a>
           <a href="checkout.html">Checkout</a>
         </div>
       </div>
