--- a/register.html
+++ b/register.html
@@ -105,8 +105,9 @@
   <header>
     <div class="header-bar">
       <!-- Logo only -->
-      <div class="logo-search">
-        <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" />
+      <div class="logo-left">
+        <a href="index.html">
+        <img src="images/logo.png" alt="BakeEase Logo" class="logo-inline" /></a>
         <h1 id="page-heading">Create Account</h1>
       </div>
       
@@ -196,7 +197,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 BakeEase Bakery</p>
+    <p>&copy; 2025 BakeEase Bakery. All rights reserved.</p>
   </footer>
 
   <script>
