--- a/products.html
+++ b/products.html
@@ -55,7 +55,7 @@
     <p>Rich and moist chocolate cake topped with ganache.</p>
     <p><strong>RM80</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="cart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
   </article>
 
   <article class="product-card" data-name="Classic Cheesecake" data-desc="creamy smooth cheese dessert">
@@ -64,7 +64,7 @@
     <p>Creamy cheesecake with a buttery biscuit base.</p>
     <p><strong>RM90</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="cart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
   </article>
 
   <article class="product-card" data-name="Pandan Gula Melaka" data-desc="pandan gula melaka traditional">
@@ -73,7 +73,7 @@
     <p>Fragrant pandan cake layered with gula melaka syrup.</p>
     <p><strong>RM85</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="cart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
   </article>
 
   <article class="product-card" data-name="Red Velvet Delight" data-desc="red velvet cream cheese">
@@ -82,7 +82,7 @@
     <p>Moist red velvet cake layered with smooth cream cheese frosting.</p>
     <p><strong>RM95</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="cart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
   </article>
 
   <article class="product-card" data-name="Tiramisu Classic" data-desc="espresso mascarpone dessert">
@@ -91,7 +91,7 @@
     <p>Layered dessert with espresso-soaked sponge and mascarpone cream.</p>
     <p><strong>RM98</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="cart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
   </article>
 
   <article class="product-card" data-name="Mango Mousse Cake" data-desc="light mango mousse tropical">
@@ -100,7 +100,7 @@
     <p>Light and airy mango mousse layered over sponge cake base.</p>
     <p><strong>RM88</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="cart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
   </article>
 
   <article class="product-card" data-name="Blueberry Crumble" data-desc="blueberry crumb topping">
@@ -109,7 +109,7 @@
     <p>Sweet and tart blueberry filling with buttery crumble topping.</p>
     <p><strong>RM75</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="cart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
   </article>
 
   <article class="product-card" data-name="Carrot Walnut Cake" data-desc="carrot walnut cinnamon">
@@ -118,7 +118,7 @@
     <p>Spiced carrot cake with crunchy walnuts and cream cheese frosting.</p>
     <p><strong>RM85</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="cart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
   </article>
 
   <article class="product-card" data-name="Mocha Buttercream Cake" data-desc="mocha buttercream chocolate">
@@ -127,7 +127,7 @@
     <p>Decadent chocolate cake filled with rich mocha buttercream.</p>
     <p><strong>RM92</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="cart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
   </article>
 </section>
 </main>
