--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <!-- Product Preview Section -->
     <section class="highlights">
-      <h3>Popular Picks</h3>
+      <h3 class="popular-heading" >Popular Picks</h3>
       <div class="product-grid">
         <article class="product-card">
           <img src="images/chocolate_cake.jpg" alt="Chocolate Cake" />
