--- a/products.html
+++ b/products.html
@@ -53,81 +53,81 @@
     <img src="images/chocolate_cake.jpg" alt="Chocolate Cake" />
     <h4>Chocolate Indulgence</h4>
     <p>Rich and moist chocolate cake topped with ganache.</p>
-    <p><strong>RM80</strong></p>
+    <p><strong>RM 80</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <button class="button add-to-cart" data-name="Chocolate Indulgence" data-price="80" data-desc="rich chocolate cake ganache"><a>Add to Cart</a></button>
   </article>
 
   <article class="product-card" data-name="Classic Cheesecake" data-desc="creamy smooth cheese dessert">
     <img src="images/cheesecake.jpg" alt="Cheesecake" />
     <h4>Classic Cheesecake</h4>
-    <p>Creamy cheesecake with a buttery biscuit base.</p>
-    <p><strong>RM90</strong></p>
+    <p>Creamy cheesecake with a full buttery biscuit base.</p>
+    <p><strong>RM 90</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <button class="button add-to-cart" data-name="Classic Cheesecake" data-price="90" data-desc="creamy smooth cheese dessert"><a>Add to Cart</a></button>
   </article>
 
   <article class="product-card" data-name="Pandan Gula Melaka" data-desc="pandan gula melaka traditional">
     <img src="images/pandan_gula_melaka.jpg" alt="Pandan Cake" />
     <h4>Pandan Gula Melaka</h4>
     <p>Fragrant pandan cake layered with gula melaka syrup.</p>
-    <p><strong>RM85</strong></p>
+    <p><strong>RM 85</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <button class="button add-to-cart" data-name="Pandan Gula Melaka" data-price="85" data-desc="pandan gula melaka traditional"><a>Add to Cart</a></button>
   </article>
 
   <article class="product-card" data-name="Red Velvet Delight" data-desc="red velvet cream cheese">
     <img src="images/red_velvet.webp" alt="Red Velvet Cake" />
     <h4>Red Velvet Delight</h4>
     <p>Moist red velvet cake layered with smooth cream cheese frosting.</p>
-    <p><strong>RM95</strong></p>
+    <p><strong>RM 95</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <button class="button add-to-cart" data-name="Red Velvet Delight" data-price="95" data-desc="red velvet cream cheese"><a>Add to Cart</a></button>
   </article>
 
   <article class="product-card" data-name="Tiramisu Classic" data-desc="espresso mascarpone dessert">
     <img src="images/tiramisu.jpg" alt="Tiramisu" />
     <h4>Tiramisu Classic</h4>
     <p>Layered dessert with espresso-soaked sponge and mascarpone cream.</p>
-    <p><strong>RM98</strong></p>
+    <p><strong>RM 98</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <button class="button add-to-cart" data-name="Tiramisu Classic" data-price="98" data-desc="espresso mascarpone dessert"><a>Add to Cart</a></button>
   </article>
 
   <article class="product-card" data-name="Mango Mousse Cake" data-desc="light mango mousse tropical">
     <img src="images/mango_mousse.jpg" alt="Mango Mousse Cake" />
     <h4>Mango Mousse Cake</h4>
     <p>Light and airy mango mousse layered over sponge cake base.</p>
-    <p><strong>RM88</strong></p>
+    <p><strong>RM 88</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <button class="button add-to-cart" data-name="Mango Mousse Cake" data-price="88" data-desc="light mango mousse tropical"><a>Add to Cart</a></button>
   </article>
 
   <article class="product-card" data-name="Blueberry Crumble" data-desc="blueberry crumb topping">
     <img src="images/blueberry_crumble.jpg" alt="Blueberry Crumble" />
     <h4>Blueberry Crumble</h4>
     <p>Sweet and tart blueberry filling with buttery crumble topping.</p>
-    <p><strong>RM75</strong></p>
+    <p><strong>RM 75</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <button class="button add-to-cart" data-name="Blueberry Crumble" data-price="75" data-desc="blueberry crumb topping"><a>Add to Cart</a></button>
   </article>
 
   <article class="product-card" data-name="Carrot Walnut Cake" data-desc="carrot walnut cinnamon">
     <img src="images/carrot_walnut.jpg" alt="Carrot Walnut Cake" />
     <h4>Carrot Walnut Cake</h4>
     <p>Spiced carrot cake with crunchy walnuts and cream cheese frosting.</p>
-    <p><strong>RM85</strong></p>
+    <p><strong>RM 85</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <button class="button add-to-cart" data-name="Carrot Walnut Cake" data-price="85" data-desc="carrot walnut cinnamon"><a>Add to Cart</a></button>
   </article>
 
   <article class="product-card" data-name="Mocha Buttercream Cake" data-desc="mocha buttercream chocolate">
     <img src="images/mocha_buttercream.jpg" alt="Mocha Cake" />
     <h4>Mocha Buttercream Cake</h4>
     <p>Decadent chocolate cake filled with rich mocha buttercream.</p>
-    <p><strong>RM92</strong></p>
+    <p><strong>RM 92</strong></p>
     <a href="product-detail.html" class="button">View Details</a>
-    <a href="shoppingCart.html" class="button" style="margin-top: 8px;">Add to Cart</a>
+    <button class="button add-to-cart" data-name="Mocha Buttercream Cake" data-price="92" data-desc="mocha buttercream chocolate"><a>Add to Cart</a></button>
   </article>
 </section>
 </main>
@@ -162,6 +162,29 @@
       });
     });
   });
+
+  const cartKey = "bakeeaseCart";
+
+  document.querySelectorAll(".add-to-cart").forEach(button => {
+    button.addEventListener("click", () => {
+      const name = button.getAttribute("data-name");
+      const price = parseFloat(button.getAttribute("data-price"));
+      const desc = button.getAttribute("data-desc");
+
+      let cart = JSON.parse(localStorage.getItem(cartKey)) || [];
+
+      const existing = cart.find(item => item.name === name);
+      if (existing) {
+        existing.quantity += 1;
+      } else {
+        cart.push({ name, price, desc, quantity: 1 });
+      }
+
+      localStorage.setItem(cartKey, JSON.stringify(cart));
+      window.location.href = "shoppingCart.html";
+    });
+  });
+
 </script>
 </body>
 </html>
