--- a/product-detail.html
+++ b/product-detail.html
@@ -160,7 +160,7 @@
               <h2>${product.title}</h2>
               <p>${product.description}</p>
               <ul>${featuresHTML}</ul>
-              <a href="cart.html" class="button">Add to Cart</a>
+              <a href="shoppingCart.html" class="button">Add to Cart</a>
             </div>
           </section>
         `;
